Final fix (UUID generation + null safety)